--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -9,6 +9,7 @@
 @import 'components/buttons';
 @import 'components/navbar';
 @import 'components/cards';
+@import 'components/dropdownlist';
 
 // Import layout
 @import 'layout/grid';
