--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,6 +67,32 @@ body {
   background: #E5E5E5;
 }
 
+.container {
+  max-width: 1740px;
+  width: 100%;
+  padding: 0 10px;
+}
+
+.product-search-btn {
+  width: 100%;
+  height: 100%;
+}
+.product-search-btn button {
+  background: #ff7e00;
+  font-size: 16px;
+  font-family: "Roboto";
+  font-weight: 500;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  border-radius: 30px;
+  text-transform: capitalize;
+  color: #ffffff;
+}
+.product-search-btn button:hover {
+  background: #333e48;
+}
+
 .navbar-area ul li {
   display: inline-block;
   margin-right: 20px;
@@ -98,6 +124,10 @@ header {
   background: #232f3f;
 }
 header .header-top-bar {
+  height: 50px;
+  border-bottom: 2px solid #2e3a48;
+}
+header .header-top-bar .header-topbar-main-area {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -107,10 +137,9 @@ header .header-top-bar {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 50px;
-  border-bottom: 2px solid #2e3a48;
+  padding-top: 16px;
 }
-header .header-top-bar .topbar-massage {
+header .header-top-bar .header-topbar-main-area .topbar-massage {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -124,14 +153,14 @@ header .header-top-bar .topbar-massage {
      -moz-column-gap: 10px;
           column-gap: 10px;
 }
-header .header-top-bar .topbar-massage p {
+header .header-top-bar .header-topbar-main-area .topbar-massage p {
   color: #93969d;
   font-size: 16px;
   font-family: "Roboto";
   text-transform: capitalize;
   font-weight: 500;
 }
-header .header-top-bar .topbar-massage a {
+header .header-top-bar .header-topbar-main-area .topbar-massage a {
   color: #93969d;
   font-size: 16px;
   font-family: "Roboto";
@@ -141,15 +170,15 @@ header .header-top-bar .topbar-massage a {
   transition: 0.5s ease;
   color: #ffffff;
 }
-header .header-top-bar .topbar-massage a:hover {
+header .header-top-bar .header-topbar-main-area .topbar-massage a:hover {
   color: #ff7e00;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul li {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul li {
   display: inline-block;
   border-right: 2px solid #2e3a48;
   padding: 0 15px;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul li a {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul li a {
   color: #93969d;
   font-size: 16px;
   font-family: "Roboto";
@@ -158,10 +187,10 @@ header .header-top-bar .top-bar-right .top-menu-area ul li a {
   -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul li a:hover {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul li a:hover {
   color: #ff7e00;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul li button {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul li button {
   color: #93969d;
   font-size: 16px;
   font-family: "Roboto";
@@ -170,19 +199,19 @@ header .header-top-bar .top-bar-right .top-menu-area ul li button {
   -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul li button:hover {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul li button:hover {
   color: #ff7e00;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul li button img {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul li button img {
   width: 15px;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul li:last-child {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul li:last-child {
   border-right: none;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul .language-select {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul .language-select {
   position: relative;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul .language-select ul {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul .language-select ul {
   position: absolute;
   top: 100%;
   left: 0;
@@ -190,13 +219,14 @@ header .header-top-bar .top-bar-right .top-menu-area ul .language-select ul {
   background: #ffffff;
   padding: 15px;
   border-radius: 5px;
+  z-index: 2;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul .language-select ul li {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul .language-select ul li {
   border-right: none;
   border-bottom: 1px solid #E5E5E5;
   padding: 10px 0;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul .language-select ul li button {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul .language-select ul li button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -210,17 +240,17 @@ header .header-top-bar .top-bar-right .top-menu-area ul .language-select ul li b
      -moz-column-gap: 10px;
           column-gap: 10px;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul .language-select ul li button:hover {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul .language-select ul li button:hover {
   -webkit-transform: translateX(10px);
           transform: translateX(10px);
 }
-header .header-top-bar .top-bar-right .top-menu-area ul .language-select ul li button img {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul .language-select ul li button img {
   width: 20px;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul .currency-select {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul .currency-select {
   position: relative;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul .currency-select ul {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul .currency-select ul {
   position: absolute;
   top: 100%;
   left: 0;
@@ -228,13 +258,14 @@ header .header-top-bar .top-bar-right .top-menu-area ul .currency-select ul {
   background: #ffffff;
   padding: 15px;
   border-radius: 5px;
+  z-index: 2;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul .currency-select ul li {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul .currency-select ul li {
   border-right: none;
   border-bottom: 1px solid #E5E5E5;
   padding: 10px 0;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul .currency-select ul li button {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul .currency-select ul li button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -248,23 +279,136 @@ header .header-top-bar .top-bar-right .top-menu-area ul .currency-select ul li b
      -moz-column-gap: 10px;
           column-gap: 10px;
 }
-header .header-top-bar .top-bar-right .top-menu-area ul .currency-select ul li button:hover {
+header .header-top-bar .header-topbar-main-area .top-bar-right .top-menu-area ul .currency-select ul li button:hover {
   -webkit-transform: translateX(10px);
           transform: translateX(10px);
 }
-header .header_main_area {
+header .header-middle-bar {
+  border-bottom: #2e3a48;
+  padding: 20px 0;
+}
+header .header-middle-bar .header-middle-bar-main-area {
+  display: grid;
+  grid-template-columns: 0.75fr 2fr 1.25fr;
+}
+header .header-middle-bar .header-middle-bar-main-area .logo-area .logo {
+  width: 300px;
+  display: block;
+}
+header .header-middle-bar .header-middle-bar-main-area .product-search-area .product-search-main-area {
+  display: grid;
+  grid-template-columns: 1fr 2.25fr 0.75fr;
+  background: #ffffff;
+  border-radius: 30px;
+  padding: 2px 2px 2px 20px;
+  height: 50px;
+}
+header .header-middle-bar .header-middle-bar-main-area .product-search-area .product-search-main-area .product-catagory-selector select {
+  color: #202020;
+  font-size: 16px;
+  background: none;
+  border: none;
+  border-right-width: medium;
+  border-right-style: none;
+  border-right-color: currentcolor;
+  width: 100%;
+  text-transform: capitalize;
+  font-family: "Roboto";
+  font-weight: 500;
+  height: 32px;
+  border-right: 2px solid #E5E5E5;
+  margin-top: 6px;
+}
+header .header-middle-bar .header-middle-bar-main-area .product-search-area .product-search-main-area .product-search-content input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  background: none;
+  font-size: 16px;
+  font-family: "Poppins";
+  font-weight: 400;
+  padding-left: 20px;
+}
+header .header-middle-bar .header-middle-bar-main-area .product-search-area .product-search-main-area .product-search-content input:focus {
+  outline: none;
+}
+header .header-middle-bar .header-middle-bar-main-area .header-middle-bar-right-area {
+  padding-left: 40px;
+}
+header .header-middle-bar .header-middle-bar-main-area .header-middle-bar-right-area ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+header .header-middle-bar .header-middle-bar-main-area .header-middle-bar-right-area ul li {
+  display: inline-block;
+}
+header .header-middle-bar .header-middle-bar-main-area .header-middle-bar-right-area ul li a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100px;
+  -webkit-column-gap: 10px;
+     -moz-column-gap: 10px;
+          column-gap: 10px;
 }
-header .header_main_area .logo a {
-  width: 300px;
-  display: block;
+header .header-middle-bar .header-middle-bar-main-area .header-middle-bar-right-area ul li a .user-icon {
+  font-size: 35px;
+  color: #ffffff;
+  position: relative;
+}
+header .header-middle-bar .header-middle-bar-main-area .header-middle-bar-right-area ul li a .cart-icon::after {
+  content: "0";
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background: #ff7e00;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 20px;
+  width: 20px;
+  font-family: "Roboto";
+  font-weight: 600;
+  font-size: 14px;
+}
+header .header-middle-bar .header-middle-bar-main-area .header-middle-bar-right-area ul li a span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 5px;
+}
+header .header-middle-bar .header-middle-bar-main-area .header-middle-bar-right-area ul li a span span {
+  font-family: "DM Sans";
+  text-transform: capitalize;
+  font-weight: 500;
+  font-size: 16px;
+}
+header .header-middle-bar .header-middle-bar-main-area .header-middle-bar-right-area ul li a span span:first-child {
+  color: #93969d;
+}
+header .header-middle-bar .header-middle-bar-main-area .header-middle-bar-right-area ul li a span span:last-child {
+  color: #ffffff;
+  font-weight: 600;
 }
