--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -1,6 +1,20 @@
 
-.singn-in-up-area{
+.product-search-btn{
+    width: 100%;
+    height: 100%;
     button{
-        
+        background: $orange;
+        font-size: 16px;
+        font-family: $header-font;
+        font-weight: 500;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        border-radius: 30px;
+        text-transform: capitalize;
+        color: $white;
+        &:hover{
+            background: $header-btn-hover;
+        }
     }
 }
