--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -10,8 +10,9 @@ $black: #202020;
 $blue: #2357B5;
 $orange: #ff7e00;
 $shadow: 0 4px 1px 0 rgba(0, 0, 0, 0.05);
-$header-border-color: #2e3a48;
-$header-bg: #232f3f;
-$header-text-color: #93969d;
+$header-border-color: #010055;
+//$header-bg: #232f3f;
+$header-bg: #ffffff;
+$header-text-color: #000138;
 $header-text-hover: #ff7e00;
 $header-btn-hover: #333e48;
